added assets files

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Sports Court Booking</title>
   <meta name="author" content="vecuro">
-  <meta name="description" content="Travolo -  Travel Agency & Tour Booking HTML Template">
-  <meta name="keywords" content="Travolo -  Travel Agency & Tour Booking HTML Template">
+  <meta name="description" content="Court-Booking">
+  <meta name="keywords" content="https://court-booking.netlify.app/">
   <meta name="robots" content="INDEX,FOLLOW">
 
   <!-- Mobile Specific Metas -->
