--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="vs-menu-area text-center">
       <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
       <div class="mobile-logo">
-        <a href="index.html"><img src="assets/img/logo.svg" alt="Travolo"></a>
+        <a href="index.html"><img src="#" alt="Court-booking"></a>
       </div>
       <div class="vs-mobile-menu">
         <ul>
@@ -113,7 +113,7 @@
         <div class="row justify-content-between align-items-center">
           <div class="col d-none d-lg-block">
             <ul class="header-contact">
-              <li><i class="fas fa-envelope"></i> <a href="mailto:info@travolo.com">info@inzeedo.com</a>
+              <li><i class="fas fa-envelope"></i> <a href="mailto:info@hello.com">info@inzeedo.com</a>
               </li>
               <li><i class="fas fa-phone-alt"></i> <a href="tel:02073885619">+94 757 743 74</a></li>
             </ul>
@@ -154,7 +154,7 @@
           <div class="row align-items-center justify-content-between">
             <div class="col-auto">
               <div class="vs-logo">
-                <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+                <a href="index.html"><img src="#" alt="logo"></a>
               </div>
             </div>
             <div class="col text-end text-xl-center">
