--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
       <div class="widget">
         <div class="vs-widget-about">
           <div class="footer-logo">
-            <a href="index.html"><img src="assets/img/logo.svg" alt="Travolo"></a>
+            <a href="index.html"><img src="#" alt="Logo"></a>
           </div>
           <p class="footer-text">
             Ut tellus dolor, dapibus eget, elementum ifend cursus eleifend,
