--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
     <div class="shape-mockup d-none d-xl-block  z-index-negative" data-bottom="13%" data-left="0%">
       <img src="assets/img/shape/walk.png" alt="circle">
     </div>
-    <div class="container">
+    <!-- <div class="container">
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-5 col-md-8">
           <div class="title-area">
@@ -832,7 +832,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
   <!--==============================
       Destinations Area End 
@@ -1061,7 +1061,7 @@
             <div class="col-lg-6">
               <div class="cta-content">
                 <h2 class="cta-title">Ready to get started?</h2>
-                <p class="cta-text">It only takes a few minutes to register your FREE Travolo account.</p>
+                <p class="cta-text">It only takes a few minutes to register your account.</p>
                 <a href="sign-up.html" class="vs-btn style2">Open An Account</a>
               </div>
             </div>
