--- a/about.html
+++ b/about.html
@@ -147,8 +147,7 @@
               <nav class="main-menu  menu-style1 d-none d-lg-block">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="event.html">Events</a></li>
-                  <li><a href="courts.html">Courts</a></li>
+                  <li><a href="court.html">Courts</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="about.html">About</a></li>
 
@@ -186,7 +185,7 @@
         <div class="breadcumb-menu-wrap">
           <ul class="breadcumb-menu">
             <li><a href="index.html">Home</a></li>
-            <li>Pages</li>
+
             <li>About Us</li>
           </ul>
         </div>
@@ -208,7 +207,7 @@
             <img class="img1" src="assets/img/about/img-2-1.jpg" alt="image1">
             <img class="img2" src="assets/img/about/img-2-2.jpg" alt="image2">
             <div class="media-box1">
-              <span class="media-info">25 Years</span>
+              <span class="media-info">5 Years</span>
               <p class="media-text">Of Experience</p>
             </div>
             <div class="media-box2">
@@ -220,8 +219,8 @@
         <div class="col-lg-5">
           <div class="about-content">
             <div class="title-area">
-              <span class="sec-subtitle">We are Travolo</span>
-              <h2 class="sec-title h1">We Are The Best For Your Travel </h2>
+              <span class="sec-subtitle">We are Court</span>
+              <h2 class="sec-title h1">We Are The Best For Your COurt </h2>
               <p class="sec-text">Blienum nhaedrum torquatos nec eul, vis detraxit periculis ex, nihil is in mei. Xei an
                 periculaeuripidis, fincartem ei est. Dlienum phaed is in mei. Lei an Hericulaeuripidis, hincartem ei
                 est.</p>
@@ -248,7 +247,7 @@
   <!--==============================
 	  Histoy area Start
 	==============================-->
-  <section class="space bg-light">
+  <!-- <section class="space bg-light">
     <div class="container" data-bg-src="assets/img/bg/map-bg.png">
       <div class="row justify-content-center text-center">
         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -333,7 +332,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--==============================
 	  Histoy area End
 	==============================-->
@@ -346,7 +345,7 @@
       <div class="row align-items-center justify-content-between">
         <div class="col-xl-5 col-lg-6">
           <div class="title-area white-title">
-            <span class="sec-subtitle">Go & Discover</span>
+            <span class="sec-subtitle">Come & Play</span>
             <h2 class="sec-title h1">Get Special Offer</h2>
             <p class="sec-text">Curabitur aliquet quam id dui posuere blandit. Vivamus magna justo, lacinia eget
               consectetur sed, convgallis at tellus.</p>
@@ -377,7 +376,7 @@
         <div class="col-lg-6 col-md-6">
           <div class="title-area white-title">
             <span class="sec-subtitle">Our Best Review’s</span>
-            <h2 class="sec-title h1">50,000 Happy Clients Around The World</h2>
+            <h2 class="sec-title h1">1,000 Happy Clients Around The Srilanka</h2>
           </div>
         </div>
       </div>
@@ -753,21 +752,21 @@
           <ul class="cart_list">
             <li class="mini_cart_item">
               <a href="shop.html" class="remove"><i class="fal fa-trash-alt"></i></a> <a href="shop.html"><img
-                  src="assets/img/products/p-1-1.png" alt="Cart Image" />Modern Cow Boy Hat</a>
+                  src="assets/img/products/p-1-1.png" alt="Cart Image" />Standard Futsal Court</a>
               <span class="quantity">
-                1 × <span class="amount"><span>$</span>100.00</span>
+                1 × <span class="amount"><span>Rs.</span>3000.00</span>
               </span>
             </li>
             <li class="mini_cart_item">
               <a href="shop.html" class="remove"><i class="fal fa-trash-alt"></i></a> <a href="shop.html"><img
-                  src="assets/img/products/p-1-2.png" alt="Cart Image" />Cat Eye Sunglasses</a>
+                  src="assets/img/products/p-1-2.png" alt="Cart Image" />All-Weather Futsal Court</a>
               <span class="quantity">
-                1 × <span class="amount"><span>$</span>10.00</span>
+                1 × <span class="amount"><span>Rs.</span>8500.00</span>
               </span>
             </li>
           </ul>
           <div class="total">
-            <strong>Subtotal:</strong> <span class="amount"><span>$</span>110.00</span>
+            <strong>Subtotal:</strong> <span class="amount"><span>Rs.</span>11500.00</span>
           </div>
           <div class="buttons">
             <a href="cart.html" class="vs-btn style4">View cart</a>
