--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
               <nav class="main-menu  menu-style1 d-none d-lg-block">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="event.html">Events</a></li>
-                  <li><a href="courts.html">Courts</a></li>
+                  <li><a href="Court.html">Courts</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="about.html">About</a></li>
 
