--- a/index.html
+++ b/index.html
@@ -58,25 +58,19 @@
       </div>
       <div class="vs-mobile-menu">
         <ul>
-          <li class="menu-item-has-children">
+          <li class="">
             <a href="index.html">Home</a>
           </li>
-          <li class="menu-item-has-children">
-            <a href="#">About Us</a>
+          <li class="">
+            <a href="about.html">About Us</a>
 
           </li>
-          <li class="menu-item-has-children">
-            <a href="#">Courts</a>
-          </li>
-          <li class="menu-item-has-children">
-            <a href="#">Events</a>
-
+          <li class="">
+            <a href="court.html">Courts</a>
           </li>
 
-          <li class="menu-item-has-children">
-            <a href="#">Book Now</a>
 
-          </li>
+
           <li>
             <a href="contact.html">Contact</a>
           </li>
