--- a/about.html
+++ b/about.html
@@ -59,33 +59,19 @@
       </div>
       <div class="vs-mobile-menu">
         <ul>
-          <li class="menu-item-has-children">
+          <li class="">
             <a href="index.html">Home</a>
           </li>
-          <li class="menu-item-has-children">
-            <a href="#">About Us</a>
+          <li class="">
+            <a href="about.html">About Us</a>
 
           </li>
-          <li class="menu-item-has-children">
-            <a href="#">Courts</a>
-            <!-- <ul class="sub-menu">
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="tours.html">Tours List</a></li>
-              <li><a href="tour-booking.html">Tour Booking</a></li>
-              <li><a href="destinations.html">Destinations</a></li>
-              <li><a href="destination-details.html">Destinations Details</a></li>
-              <li><a href="error.html">Error</a></li>
-            </ul> -->
-          </li>
-          <li class="menu-item-has-children">
-            <a href="#">Events</a>
-
+          <li class="">
+            <a href="court.html">Courts</a>
           </li>
 
-          <li class="menu-item-has-children">
-            <a href="#">Book Now</a>
 
-          </li>
+
           <li>
             <a href="contact.html">Contact</a>
           </li>
