date time added

--- a/court.html
+++ b/court.html
@@ -570,27 +570,16 @@
                     </div>
                     <div class="form-group ">
                       <i class="fas fa-compass"></i>
-                      <input type="text" placeholder="Where To?" />
+                      <input type="date" placeholder="Select Date?" />
                     </div>
                     <div class="form-group">
                       <i class="fas fa-calendar-alt"></i>
-                      <select class="form-select" name="name">
-                        <option value="" selected="selected" disabled="disabled" hidden="">Select Month</option>
-                        <option value="">January</option>
-                        <option value="">February</option>
-                        <option value="">March</option>
-                        <option value="">April</option>
-                      </select>
+                      <input type="time" placeholder="Select Time?" />
                     </div>
                     <div class="form-group">
                       <i class="fas fa-thumbtack"></i>
-                      <select class="form-select" name="name">
-                        <option value="" selected="selected" disabled="disabled" hidden="">Select Type</option>
-                        <option value="">Adventure </option>
-                        <option value="">Combining</option>
-                        <option value="">Sporting</option>
-                        <option value="">Domestic</option>
-                      </select>
+                      <input type="number" placeholder="Total Persons?" />
+
                     </div>
                     <div class="price_slider_wrapper">
                       <h3 class="widget_title">Filter By Price</h3>
