add footer links

--- a/court.html
+++ b/court.html
@@ -667,10 +667,10 @@
               <div class="menu-all-pages-container">
                 <ul class="menu">
                   <li><a href="index.html"><i class="far fa-angle-right"></i> Home</a></li>
-                  <li><a href="destinations.html"><i class="far fa-angle-right"></i> Events</a></li>
-                  <li><a href="tours.html"><i class="far fa-angle-right"></i> Courts</a></li>
-                  <li><a href="shop.html"><i class="far fa-angle-right"></i> About</a></li>
-                  <li><a href="blog.html"><i class="far fa-angle-right"></i> Contact</a></li>
+
+                  <li><a href="court.html"><i class="far fa-angle-right"></i> Courts</a></li>
+                  <li><a href="about.html"><i class="far fa-angle-right"></i> About</a></li>
+                  <li><a href="contact.html"><i class="far fa-angle-right"></i> Contact</a></li>
                 </ul>
               </div>
             </div>
