login and signup

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col-auto d-flex ">
 
 
-            <a class="user-btn" href="sign-up.html"><i class="far fa-user-circle"></i></a>
+            <a class="user-btn" href="signin.html"><i class="far fa-user-circle"></i></a>
           </div>
         </div>
       </div>
