--- a/cart.html
+++ b/cart.html
@@ -306,9 +306,9 @@
             <thead>
               <tr>
                 <th class="cart-col-image">Image</th>
-                <th class="cart-col-productname">Product Name</th>
+                <th class="cart-col-productname">Court Name</th>
                 <th class="cart-col-price">Price</th>
-                <th class="cart-col-quantity">Quantity</th>
+                <th class="cart-col-quantity">Hours</th>
                 <th class="cart-col-total">Total</th>
                 <th class="cart-col-remove">Remove</th>
               </tr>
@@ -320,10 +320,10 @@
                       src="assets/img/products/p-1-1.png" alt="Image" /></a>
                 </td>
                 <td data-title="Name">
-                  <a class="cart-productname" href="shop-details.html">Modern Cow Boy Hat</a>
+                  <a class="cart-productname" href="shop-details.html">Standard Futsal Court</a>
                 </td>
                 <td data-title="Price">
-                  <span class="amount"><bdi><span>$</span>100</bdi></span>
+                  <span class="amount"><bdi><span>Rs.</span>3000</bdi></span>
                 </td>
                 <td data-title="Quantity">
                   <div class="quantity">
@@ -337,7 +337,7 @@
                   </div>
                 </td>
                 <td data-title="Total">
-                  <span class="amount"><bdi><span>$</span>100</bdi></span>
+                  <span class="amount"><bdi><span>Rs.</span>3000</bdi></span>
                 </td>
                 <td data-title="Remove">
                   <a href="#" class="remove"><i class="fal fa-trash-alt"></i></a>
@@ -349,10 +349,10 @@
                       src="assets/img/products/p-1-2.png" alt="Image" /></a>
                 </td>
                 <td data-title="Name">
-                  <a class="cart-productname" href="shop-details.html">Cat Eye Sunglasses</a>
+                  <a class="cart-productname" href="shop-details.html">Standard Futsal Court</a>
                 </td>
                 <td data-title="Price">
-                  <span class="amount"><bdi><span>$</span>10</bdi></span>
+                  <span class="amount"><bdi><span>Rs. </span>3000</bdi></span>
                 </td>
                 <td data-title="Quantity">
                   <div class="quantity">
@@ -366,7 +366,7 @@
                   </div>
                 </td>
                 <td data-title="Total">
-                  <span class="amount"><bdi><span>$</span>10</bdi></span>
+                  <span class="amount"><bdi><span>Rs.</span>3000</bdi></span>
                 </td>
                 <td data-title="Remove">
                   <a href="#" class="remove"><i class="fal fa-trash-alt"></i></a>
@@ -398,7 +398,7 @@
               <tr>
                 <td>Cart Subtotal</td>
                 <td data-title="Cart Subtotal">
-                  <span class="amount"><bdi><span>$</span>110</bdi></span>
+                  <span class="amount"><bdi><span>Rs. </span>6000</bdi></span>
                 </td>
               </tr>
               <tr class="shipping">
@@ -455,7 +455,7 @@
               <tr class="order-total">
                 <td>Order Total</td>
                 <td data-title="Total">
-                  <strong><span class="amount"><bdi><span>$</span>110</bdi></span></strong>
+                  <strong><span class="amount"><bdi><span>Rs.</span>6000</bdi></span></strong>
                 </td>
               </tr>
             </tfoot>
