fiex:layout issue and added cart on all pages

--- a/cart.html
+++ b/cart.html
@@ -481,7 +481,7 @@
     </div>
     <div class="widget-area">
       <div class="container">
-        <div class="row g-5 justify-content-between">
+        <div class="row  justify-content-between">
           <div class="col-md-6 col-xl-3">
             <div class="widget footer-widget">
               <div class="vs-widget-about">
@@ -499,7 +499,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-2">
+          <div class="col-md-6 mt-4 md-mt-0 col-xl-2">
             <div class="widget widget_nav_menu footer-widget">
               <h3 class="widget_title">Useful Links</h3>
               <div class="menu-all-pages-container">
@@ -513,7 +513,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 mt-4 md-mt-0 col-xl-3">
             <div class="widget footer-widget">
               <h4 class="widget_title">Our Instagram</h4>
               <div class="sidebar-gallery">
@@ -538,7 +538,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 mt-4 md-mt-0 col-xl-3">
             <div class="widget footer-widget">
               <h4 class="widget_title">Subscribe</h4>
               <form class="newsletter-form">
