feat:add category serach filter

--- a/court.html
+++ b/court.html
@@ -592,6 +592,17 @@
 
                     </div>
                     <div class="price_slider_wrapper">
+                      <h3 class="widget_title">Filter By Category</h3>
+                      <div class="form-group">
+                        <i class="fas fa-calendar-alt"></i>
+                        <select class="form-select" name="name">
+                          <option value="" selected="selected" disabled="disabled" hidden="">Select Category</option>
+                          <option value="">Category 1</option>
+                          <option value="">Category 2</option>
+                          <option value="">Category 3</option>
+                          <option value="">Categroy 4</option>
+                        </select>
+                      </div>
                       <h3 class="widget_title">Filter By Price</h3>
                       <div class="price_slider"></div>
                       <div class="price_label">
