--- a/court.html
+++ b/court.html
@@ -609,6 +609,20 @@
                         Price: <span class="from">$10</span> — <span class="to">$75</span>
                       </div>
                     </div>
+                    <div class="price_slider_wrapper">
+                      <h3 class="widget_title">Filter By Location</h3>
+                      <div class="form-group">
+                        <i class="fas fa-calendar-alt"></i>
+                        <select class="form-select" name="name">
+                          <option value="" selected="selected" disabled="disabled" hidden="">Select Category</option>
+                          <option value="">Location 1</option>
+                          <option value="">Location 2</option>
+                          <option value="">Location 3</option>
+                          <option value="">Location 4</option>
+                        </select>
+                      </div>
+
+                    </div>
                     <div class="form-group">
                       <div class="chekbox-area">
                         <input type="radio" id="popular" name="fav_language" value="popular" checked />
