feat:added single court

--- a/court.html
+++ b/court.html
@@ -326,7 +326,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item hightTolow">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -336,7 +336,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -344,7 +344,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -352,7 +352,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item hightTolow">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -362,7 +362,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -370,7 +370,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -378,7 +378,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item hightTolow">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -388,7 +388,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -396,7 +396,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -404,7 +404,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item date">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -414,7 +414,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -422,7 +422,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -430,7 +430,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item lowToHigh">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -440,7 +440,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -448,7 +448,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -456,7 +456,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item hightTolow">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -466,7 +466,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -474,7 +474,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -482,7 +482,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item date hightTolow">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -492,7 +492,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -500,7 +500,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -508,7 +508,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item lowToHigh">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -518,7 +518,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -526,7 +526,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
@@ -534,7 +534,7 @@
                 <div class="col-xl-4 col-lg-6 col-sm-6 filter-item hightTolow">
                   <div class="package-style1">
                     <div class="package-img">
-                      <a href="tour-booking.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
+                      <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
                       <div class="package-review">
@@ -544,7 +544,7 @@
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
                       </div>
-                      <h3 class="package-title"><a href="tour-booking.html">Basketball Court</a></h3>
+                      <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
                         <a href="#">(28m x 15m)</a>
@@ -552,7 +552,7 @@
                       </div>
                       <div class="package-footer">
                         <span class="package-price">Rs.3000</span>
-                        <a href="tour-booking.html" class="vs-btn">View Details</a>
+                        <a href="single-court.html" class="vs-btn">View Details</a>
                       </div>
                     </div>
                   </div>
