feat:added single court

--- a/single-court.html
+++ b/single-court.html
@@ -894,11 +894,11 @@
       <div class="shadow-color"></div>
       <div class="container">
         <div class="cta-style1">
-          <div class="row align-items-center justify-content-between">
+          <div class="row g-5 align-items-center justify-content-between">
             <div class="col-lg-6">
               <div class="cta-content">
                 <h2 class="cta-title">Ready to get started?</h2>
-                <p class="cta-text">It only takes a few minutes to register your FREE Travolo account.</p>
+                <p class="cta-text">It only takes a few minutes to register your account.</p>
                 <a href="sign-up.html" class="vs-btn style2">Open An Account</a>
               </div>
             </div>
@@ -913,19 +913,16 @@
     </div>
     <div class="widget-area">
       <div class="container">
-        <div class="row g-5 justify-content-between">
+        <div class="row  justify-content-between">
           <div class="col-md-6 col-xl-3">
             <div class="widget footer-widget">
               <div class="vs-widget-about">
-                <div>
-                  <a class="footer-logo" href="index.html"><img src="assets/img/white-logo.svg" alt="Travolo"
-                      class="logo" /></a>
+                <div class="footer-logo">
+                  <a href="index.html"><img src="assets/img/white-logo.sv" alt="Fruitsel" class="logo" /></a>
                 </div>
-                <p class="footer-text">
-                  Curabitur aliquet quam id dui bandit posuere blandit.
-                  Vivamfdsus magna justo blandit aliquet.
-                </p>
-                <div class="social-style">
+                <p class="footer-text">Curabitur aliquet quam id dui bandit posuere blandit. Vivamfdsus magna justo
+                  blandit aliquet.</p>
+                <div class="social-style1">
                   <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                   <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                   <a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a>
@@ -934,21 +931,21 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-2">
+          <div class="col-md-6 mt-4 md-mt-0 col-xl-2">
             <div class="widget widget_nav_menu footer-widget">
               <h3 class="widget_title">Useful Links</h3>
               <div class="menu-all-pages-container">
                 <ul class="menu">
                   <li><a href="index.html"><i class="far fa-angle-right"></i> Home</a></li>
-                  <li><a href="destinations.html"><i class="far fa-angle-right"></i> Destinations</a></li>
-                  <li><a href="tours.html"><i class="far fa-angle-right"></i> Tour</a></li>
-                  <li><a href="shop.html"><i class="far fa-angle-right"></i> Shop</a></li>
-                  <li><a href="blog.html"><i class="far fa-angle-right"></i> Blog</a></li>
+
+                  <li><a href="court.html"><i class="far fa-angle-right"></i> Courts</a></li>
+                  <li><a href="about.html"><i class="far fa-angle-right"></i> About</a></li>
+                  <li><a href="contact.html"><i class="far fa-angle-right"></i> Contact</a></li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 mt-4 md-mt-0 col-xl-3">
             <div class="widget footer-widget">
               <h4 class="widget_title">Our Instagram</h4>
               <div class="sidebar-gallery">
@@ -973,13 +970,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 mt-4 md-mt-0 col-xl-3">
             <div class="widget footer-widget">
               <h4 class="widget_title">Subscribe</h4>
               <form class="newsletter-form">
-                <p class="form_text">
-                  Subscribe Our Newsletter For Getting Quick Updates
-                </p>
+                <p class="form_text">Subscribe Our Newsletter For Getting Quick Updates</p>
                 <input class="form-control" type="email" placeholder="Your Email Address" />
                 <button type="submit" class="vs-btn">Subscribe</button>
               </form>
@@ -992,11 +987,9 @@
       <div class="copyright-wrap">
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-auto">
-            <p class="copyright-text">
-              Copyright <i class="fal fa-copyright"></i>
-              <script>document.write(new Date().getFullYear())</script>
-              <a href="index.html">Travolo</a>. All Rights Reserved By
-              <a href="https://themeforest.net/user/vecuro">Vecuro</a>
+            <p class="copyright-text">Copyright <i class="fal fa-copyright"></i>
+              <script>document.write(new Date().getFullYear())</script> <a href="index.html"> Uff</a>.
+              All Rights Reserved By <a href="https://themeforest.net/user/vecuro">Uff</a>
             </p>
           </div>
           <div class="col-auto d-none d-lg-block">
