--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="container">
           <form class="hero-form">
             <div class="row">
-              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+              <div class="col-lg-2 col-md-6 col-sm-6 col-12">
                 <div class="form-group ">
                   <i class="fas fa-compass"></i>
                   <input type="date" class="form-control" placeholder="Select Booking Date" />
@@ -272,11 +272,24 @@
               </div>
               <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="form-group">
+                  <i class="fas fa-calendar-alt"></i>
+                  <select class="form-select" name="name">
+                    <option value="" selected="selected" disabled="disabled" hidden="">Select Court Type</option>
+                    <option value="">Basketball</option>
+                    <option value="">Tennis</option>
+                    <option value="">Badminton</option>
+                    <option value="">Football</option>
+                    <option value="">Cricket</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
                   <i class="fas fa-thumbtack"></i>
                   <input type="time" class="form-control" placeholder="Select Booking Date" />
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+              <div class="col-lg-2 col-md-6 col-sm-6 col-12">
                 <button class="vs-btn style4">Book Now</button>
               </div>
             </div>
