fix:fix layout booking in homepage

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </div>
 
       <div class="hero-bottom">
-        <div class="container">
+        <div class="container-fluid">
           <form class="hero-form">
             <div class="row">
               <div class="col-lg-2 col-md-6 col-sm-6 col-12">
@@ -371,7 +371,7 @@
         <div class="col-xl-6 col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
           <div class="title-area">
             <span class="sec-subtitle">Professional Courts</span>
-            <h2 class="sec-title h1">Best Holiday Package</h2>
+            <h2 class="sec-title h1">Best Package</h2>
             <p class="sec-text">Curabitur aliquet quam id dui posuere blandit. Vivamus magna justo, lacinia eget
               consectetur sed, convgallis at tellus. Vestibulum ac diam sit.</p>
           </div>
